--- a/pages/2 Dashboard.html
+++ b/pages/2 Dashboard.html
@@ -41,7 +41,7 @@
 		<div class="row" style="background-color:#000;">
 			<div class="col-xs-12 col-md-12" style="padding: 10px 50px;">
 				<a href="2 Dashboard.html" style="color:#fff;font-size: 20px;font-weight:bold;">JCA Modas</a>
-				<a href="1 Login.html" class="btn btn-danger pull-right">Sair</a>
+				<a href="../index.html" class="btn btn-danger pull-right">Sair</a>
 			</div>
 		</div>
 		
