--- a/pages/17 Vender.html
+++ b/pages/17 Vender.html
@@ -60,7 +60,7 @@
                     
 					<div class="row">
 						<div class="col-lg-6">
-							<form action="13 Recibos.html" role="form">
+							<form action="13-2 Recibo.html" role="form">
 								<div class="col-md-12 col-xs-12">
 									<h4><b>Informações da compra</b></h4><hr/>
 								</div>
