--- a/pages/9-3-2 ItemVendido.html
+++ b/pages/9-3-2 ItemVendido.html
@@ -57,7 +57,7 @@
 						<div class="col-lg-6">
 							<form action="17 Vender.html" role="form">
 								<div class="form-group col-md-6 col-xs-6">
-									<label>Item</label>
+									<label>Item</label><a href="9-2 Item.html" class="pull-right">INCLUIR</a>
 									<select class="form-control">
 										<option>Sofá</option>
 										<option>Capa de Celular</option>
