--- a/pages/4 Clientes.html
+++ b/pages/4 Clientes.html
@@ -53,7 +53,7 @@
                         <div class="panel-heading">
 							<i class="fa fa-user fa-fw"></i>
                             Clientes
-							<a href="4-2 Usuario.html" class="pull-right">Cadastrar</a>
+							<a href="4-2 Cliente.html" class="pull-right">Cadastrar</a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
