--- a/pages/13 Recibos.html
+++ b/pages/13 Recibos.html
@@ -55,7 +55,7 @@
 						<div  class="pull-right">
 							<a href="13-3 RecibosResumo.html">RESUMO</a>
 							<a href="8-6 VendasVendedores.html" style="display:block;margin-top:5px;">POR VENDEDOR</a>
-							<a href="15 Pagamentos.html" style="display:block;margin-top:5px;">POR FORMA DE PAGAMENTO</a>
+							<a href="15 Pagamentos.html" style="display:block;margin-top:5px;">PAGAMENTOS RECEBIDOS</a>
 						</div>
 						VENDAS
 						<div></div>
