jca v0.0.1 - Included outgoing

--- a/pages/15-3 PagamentosResumo.html
+++ b/pages/15-3 PagamentosResumo.html
@@ -55,6 +55,11 @@
 						RESUMO DOS PAGAMENTOS
 					</div>
 				</div>
+				<div class="table-responsive text-center" style="font-size: 24px;background-color: #def54e;">
+					<div class="col-md-12 col-xs-12">
+						<b style="color:red;">RECEBIDOS</b> 
+					</div>
+				</div>
 				<div class="table-responsive text-center" style="font-size: 22px;background-color: #def54e;">
 					<div class="col-md-12 col-xs-12" style="padding-top: 10px;">
 						<a href="15-3 PagamentosResumo.html" style="font-weight: bold">MENSAL </a><b>|</b>
