--- a/pages/18-2-1 GastosResumoDiario.html
+++ b/pages/18-2-1 GastosResumoDiario.html
@@ -52,29 +52,24 @@
 				<br/>
 				<div class="table-responsive text-center" style="font-size: 13px;background-color: #eee;padding: 5px;font-weight:bold;">
 					<div class="col-md-12 col-xs-12">
-						RESUMO DOS PAGAMENTOS
-					</div>
-				</div>
-				<div class="table-responsive text-center" style="font-size: 24px;background-color: #def54e;">
-					<div class="col-md-12 col-xs-12">
-						<b style="color:red;">RECEBIDOS</b> 
+						RESUMO DOS GASTOS
 					</div>
 				</div>
 				<div class="table-responsive text-center" style="font-size: 22px;background-color: #def54e;">
 					<div class="col-md-12 col-xs-12" style="padding-top: 10px;">
-						<a href="15-3 PagamentosResumo.html" style="font-weight: bold">MENSAL </a><b>|</b>
-						<a href="15-3-1 PagamentosResumoDiario.html" style="font-weight: bold"> DIÁRIO</a>
+						<a href="18-2 GastosResumo.html" style="font-weight: bold">MENSAL </a><b>|</b>
+						<a href="18-2-1 GastosResumoDiario.html" style="font-weight: bold"> DIÁRIO</a>
 					</div>
 				</div>
 				<div class="table-responsive text-center" style="font-size: 13px;background-color: #eee;padding: 5px;font-weight:bold;">
 					<div class="col-md-3 col-xs-3">
-						À VISTA
+						À PAGAR
 					</div>
 					<div class="col-md-3 col-xs-3">
 						R$ 1450,25
 					</div>
 					<div class="col-md-3 col-xs-3">
-						PARCELADO
+						PAGO
 					</div>
 					<div class="col-md-3 col-xs-3">
 						R$ 2378,13
@@ -96,7 +91,8 @@
 						<thead style="font-size: 11px;">
 							<tr>
 								<th class="text-center">DIA</th>
-								<th class="text-center">Valor Total</th>
+								<th class="text-center">Valor Gasto</th>
+								<th class="text-center">Valor Pago</th>
 								<th class="text-center">À Vista</th>
 								<th class="text-center">Parcelado</th>
 								<th></th>
@@ -106,65 +102,74 @@
 							<tr>
 								<td><small>JAN</small> 1</td>
 								<td>R$ 473,20</td>
+								<td>R$ 173,20</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>	
 							<tr>
 								<td><small>JAN</small> 2</td>
 								<td>R$ 568,00</td>
+								<td>R$ 173,20</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 3</td>
 								<td>R$ 45,70</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 4</td>
 								<td>R$ 45,70</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 5</td>
 								<td>R$ 121,12</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 6</td>
 								<td>R$ 212,90</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 7</td>
 								<td>R$ 21,90</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 8</td>
 								<td>R$ 122,80</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 							<tr>
 								<td><small>JAN</small> 9</td>
 								<td>R$ 300,00</td>
+								<td>R$ 17,00</td>
 								<td>R$ 37,00</td>
 								<td>R$ 123,20</td>
-								<td class="text-right"><small><a href="15 Pagamentos.html">VER</a></td>
+								<td class="text-right"><small><a href="18 Gastos.html">VER</a></td>
 							<tr>
 						</tbody>	
 					</table>
