--- a/pages/18-5-1 GastosTipoResumo.html
+++ b/pages/18-5-1 GastosTipoResumo.html
@@ -50,85 +50,110 @@
 
             <div class="col-lg-12 col-md-8">
 				<br/>
-				<div class="table-responsive text-center" style="font-size: 12px;background-color: #eee;padding: 5px;">
+				<div class="table-responsive text-center" style="font-size: 13px;background-color: #eee;padding: 5px;font-weight:bold;">
 					<div class="col-md-12 col-xs-12">
-						PAGAMENTOS<small class="pull-right"><a href="15-3 PagamentosResumo.html">RESUMO</a></small>
+						RESUMO DOS GASTOS
 					</div>
 				</div>
 				<div class="table-responsive text-center" style="font-size: 24px;background-color: #def54e;">
 					<div class="col-md-12 col-xs-12">
-						<b style="color:red;">RECEBIDOS</b> 
+						<b style="color:red;">FIXO</b> 
+						<b style="font-size: 15px;display:block;padding-bottom:5px;"><small>R$</small> 19.923,50</b>
 					</div>
 				</div>
-				<div class="table-responsive text-center" style="font-size: 14px;background-color: #def54e;">
-					<div class="col-md-12 col-xs-12" style="padding-top: 10px;">
-						<small>12</small> JAN 20 - <small>5</small> MAR 20 
+				<hr style="margin: 1px;"/>
+				<div class="table-responsive text-center" style="font-size: 13px;background-color: #eee;padding: 5px;font-weight:bold;">
+					<div class="col-md-3 col-xs-3">
+						À PAGAR
+					</div>
+					<div class="col-md-3 col-xs-3">
+						R$ 1450,25
+					</div>
+					<div class="col-md-3 col-xs-3">
+						PAGO
+					</div>
+					<div class="col-md-3 col-xs-3">
+						R$ 2378,13
 					</div>
 				</div>
-				<div class="table-responsive text-center" style="font-size: 22px;background-color: #def54e">
-					<div class="col-md-12 col-xs-12" style="padding: 5px;">
-						<b><small>R$</small> 2.250,50</b>
-					</div>
-					<div class="col-md-3 col-xs-3 text-right" style="padding-bottom: 5px;font-size: 12px;">
-						<b><small>À VISTA</small></b>
-					</div>	
-					<div class="col-md-3 col-xs-3 text-left" style="padding-bottom: 5px;font-size: 12px;">
-						<b><small>R$</small> 1.150,50</b>
-					</div>	
-					<div class="col-md-3 col-xs-3 text-right" style="padding-bottom: 5px;font-size: 12px;">
-						<b><small>PARCELADO</small></b>
-					</div>	
-					<div class="col-md-3 col-xs-3 text-left" style="padding-bottom: 5px;font-size: 12px;">
-						<b><small>R$</small> 850,50</b>
-					</div>	
-						
-				</div>	
-				<div class="table-responsive" style="font-size: 12px;">
+				<div class="table-responsive text-center">
 					<table class="table table-striped table-bordered table-hover" id="dataTables-example">
-						<thead>
+						<thead style="font-size: 11px;">
 							<tr>
-								<th>Pago em</th>
-								<th>Valor</th>
-								<th>Forma de Pagamento</th>
-								<th>Status</th>
-								<th></th>
+								<th class="text-center">Mês</th>
+								<th class="text-center">Valor Gasto</th>
+								<th class="text-center">Valor Pago</th>
+								<th class="text-center">À Vista</th>
+								<th class="text-center">Parcelado</th>
 								<th></th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody style="font-size: 13px;">
 							<tr>
-								<td>10/01/2016</td>
-								<td>R$ 13,50</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cartão de Crédito </a><small>(VISA)</small></td>
-								<td>Pagamento Parcial</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
+								<td>MAI 20</td>
+								<td>R$ 473,20</td>
+								<td>R$ 130,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>	
 							<tr>
-								<td>22/01/2016</td>
-								<td>R$ 22,00</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Dinheiro </a></td>
-								<td>Quitado</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
+								<td>ABR 20</td>
+								<td>R$ 568,00</td>
+								<td>R$ 130,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
 							<tr>
-								<td>23/02/2016</td>
-								<td>R$ 138,50</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cartão de Crédito </a> <small>(VISA)</small></td>
-								<td>Pagamento Parcial</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
 							<tr>
-								<td>02/03/2016</td>
-								<td>R$ 12,00</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cheque </a></td>
-								<td>Quitado</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
-						</tbody>
+								<td>MAR 20</td>
+								<td>R$ 45,70</td>
+								<td>R$ 10,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+							<tr>
+								<td>FEV 20</td>
+								<td>R$ 121,12</td>
+								<td>R$ 90,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+							<tr>
+								<td>JAN 20</td>
+								<td>R$ 212,90</td>
+								<td>R$ 130,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+							<tr>
+								<td>DEZ 19</td>
+								<td>R$ 21,90</td>
+								<td>R$ 13,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+							<tr>
+								<td>NOV 19</td>
+								<td>R$ 122,80</td>
+								<td>R$ 30,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+							<tr>
+								<td>OUT 19</td>
+								<td>R$ 300,00</td>
+								<td>R$ 220,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+								<td class="text-right"><small><a href="18-5 GastosTipo.html">VER</a></td>
+							<tr>
+						</tbody>	
 					</table>
 
 			   </div>
