--- a/pages/3-2 Usuario.html
+++ b/pages/3-2 Usuario.html
@@ -64,10 +64,15 @@
 										<option>Juliana Paz</option>
 									</select>
 								</div>
-								<div class="form-group col-md-6 col-xs-6">
+								<div class="form-group col-md-3 col-xs-3">
 									<label>Username</label>
 									<input class="form-control">
 								</div>
+								<div class="form-group col-md-3 col-xs-3">
+									<label>Senha</label>
+									<input class="form-control">
+								</div>
+								
 								<div class="form-group col-md-6 col-xs-6">
 									<label>Nível de Acesso</label>
 									<select class="form-control">
