--- a/pages/18-5-2 GastosPorTipo.html
+++ b/pages/18-5-2 GastosPorTipo.html
@@ -52,12 +52,7 @@
 				<br/>
 				<div class="table-responsive text-center" style="font-size: 12px;background-color: #eee;padding: 5px;">
 					<div class="col-md-12 col-xs-12">
-						PAGAMENTOS<small class="pull-right"><a href="15-3 PagamentosResumo.html">RESUMO</a></small>
-					</div>
-				</div>
-				<div class="table-responsive text-center" style="font-size: 24px;background-color: #def54e;">
-					<div class="col-md-12 col-xs-12">
-						<b style="color:red;">RECEBIDOS</b> 
+						GASTOS POR TIPO
 					</div>
 				</div>
 				<div class="table-responsive text-center" style="font-size: 14px;background-color: #def54e;">
@@ -65,6 +60,7 @@
 						<small>12</small> JAN 20 - <small>5</small> MAR 20 
 					</div>
 				</div>
+				
 				<div class="table-responsive text-center" style="font-size: 22px;background-color: #def54e">
 					<div class="col-md-12 col-xs-12" style="padding: 5px;">
 						<b><small>R$</small> 2.250,50</b>
@@ -85,50 +81,31 @@
 				</div>	
 				<div class="table-responsive" style="font-size: 12px;">
 					<table class="table table-striped table-bordered table-hover" id="dataTables-example">
-						<thead>
+						<thead style="font-size: 11px;">
 							<tr>
-								<th>Pago em</th>
-								<th>Valor</th>
-								<th>Forma de Pagamento</th>
-								<th>Status</th>
-								<th></th>
-								<th></th>
+								<th class="text-center">Tipo</th>
+								<th class="text-center">Valor Gasto</th>
+								<th class="text-center">Valor Pago</th>
+								<th class="text-center">À Vista</th>
+								<th class="text-center">Parcelado</th>
 							</tr>
 						</thead>
-						<tbody>
+						<tbody style="font-size: 13px;">
 							<tr>
-								<td>10/01/2016</td>
-								<td>R$ 13,50</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cartão de Crédito </a><small>(VISA)</small></td>
-								<td>Pagamento Parcial</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
+								<td><b><a href="18-5 GastosTipo.html">FIXO</a></b></td>
+								<td>R$ 473,20</td>
+								<td>R$ 88,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
+							<tr>	
 							<tr>
-								<td>22/01/2016</td>
-								<td>R$ 22,00</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Dinheiro </a></td>
-								<td>Quitado</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
+								<td><b><a href="18-5 GastosTipo.html">VARIÁVEL</a></b></td>
+								<td>R$ 568,00</td>
+								<td>R$ 330,00</td>
+								<td>R$ 37,00</td>
+								<td>R$ 123,20</td>
 							<tr>
-								<td>23/02/2016</td>
-								<td>R$ 138,50</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cartão de Crédito </a> <small>(VISA)</small></td>
-								<td>Pagamento Parcial</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
-							<tr>
-								<td>02/03/2016</td>
-								<td>R$ 12,00</td>
-								<td><a href="15-4 PagamentosCategoria.html"/>Cheque </a></td>
-								<td>Quitado</td>
-								<td><a href="15-2 Pagamento.html" class="small">Editar</a></td>
-								<td><a href="#" class="small">Excluir</a></td>
-							</tr>
-						</tbody>
+						</tbody>	
 					</table>
 
 			   </div>
