--- a/pages/4-2 Cliente.html
+++ b/pages/4-2 Cliente.html
@@ -56,18 +56,27 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<form action="4 Clientes.html" role="form">
-								<div class="form-group col-md-12 col-xs-12">
-									<label>Nome</label>
-									<input class="form-control">
-								</div>
 								<div class="form-group col-md-6 col-xs-6">
-									<label>Cpf</label>
+									<label>Nome</label>
 									<input class="form-control">
 								</div>
 								<div class="form-group col-md-6 col-xs-6">
 									<label>Data de Nascimento</label>
 									<input class="form-control">
 								</div>
+								<div class="form-group col-md-4 col-xs-4">
+									<label>Cpf</label>
+									<input class="form-control">
+								</div>
+								<div class="form-group col-md-4 col-xs-4">
+									<label>Whatsapp</label>
+									<input class="form-control">
+								</div>
+								<div class="form-group col-md-4 col-xs-4">
+									<label>Email</label>
+									<input class="form-control">
+								</div>
+								
 								<button type="submit" class="btn btn-default">Salvar</button>
 							</form>
 							<br/>
