--- a/pages/6-4-2 NovaFolha.html
+++ b/pages/6-4-2 NovaFolha.html
@@ -73,20 +73,8 @@
 									</div>
 									
 									<div class="form-group col-md-4 col-xs-4">
-										<label>Data de Vencimento</label>
+										<label>Dia de Pagamento</label>
 										<input class="form-control">
-									</div>
-									<div class="form-group col-md-4 col-xs-4">
-										<label>Data de Pagamento</label>
-										<input class="form-control">
-									</div>
-									<div class="form-group col-md-4 col-xs-4">
-										<label>Status</label>
-										<select class="form-control">
-											<option>Quitado</option>
-											<option>Em aberto</option>
-											<option>Atrasado</option>
-										</select>
 									</div>
 								</div>
 								
